Aggiunto header con nav, riga e col

--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
 </head>
+<header>
+  <nav class="nav-container bg-white">
+    <div class="row nav-row">
+      <div class="col">
+        <img src="./img/logo-small.png">
+        <a href="First" class="pd black">Perché Dropbox</a>
+        <a href="Second" class="pd black">Funzioni</a>
+        <a href="Third" class="pd black">Piani e prezzi</a>
+      </div>
+      <div class="col">
+        <a href="First" class="pd black">Supporto</a>
+        <a href="Second" class="pd black">Contatta l'ufficio vendite</a>
+        <a href="Third" class="pd black">Accedi</a>
+        <a href="Third" class="pd black bg-blue white">Inizia</a>
+      </div>
+    </div>
+  </nav>
+</header>
+<main>
+
+</main>
+<footer>
+
+</footer>
 <body>
     
 </body>
