Fix bottone "inizia" header

--- a/Index.html
+++ b/Index.html
@@ -9,26 +9,30 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
 </head>
+<!-- Toolbar header -->
 <header>
   <nav class="nav-container bg-white">
     <div class="row nav-row">
       <div class="col">
-        <img src="./img/logo-small.png">
-        <a href="First" class="pd black">Perché Dropbox</a>
-        <a href="Second" class="pd black">Funzioni</a>
-        <a href="Third" class="pd black">Piani e prezzi</a>
+        <img src="./img/logo-small.png" class="logo">
+        <a href="First" class="pd-nav text-deco black">Perché Dropbox</a>
+        <a href="Second" class="pd-nav text-deco black">Funzioni</a>
+        <a href="Third" class="pd-nav text-deco black">Piani e prezzi</a>
       </div>
       <div class="col">
-        <a href="First" class="pd black">Supporto</a>
-        <a href="Second" class="pd black">Contatta l'ufficio vendite</a>
-        <a href="Third" class="pd black">Accedi</a>
-        <a href="Third" class="pd black bg-blue white">Inizia</a>
+        <a href="First" class="pd-nav text-deco black">Supporto</a>
+        <a href="Second" class="pd-nav text-deco black">Contatta l'ufficio vendite</a>
+        <a href="Third" class="pd-nav text-deco black">Accedi</a>
+        <a href="Fourth" class="pd-nav-special bg-blue white text-deco">Inizia</a>
       </div>
     </div>
   </nav>
 </header>
 <main>
+<!-- Hero -->
+<section class="">
 
+</section>
 </main>
 <footer>
 
