--- a/Index.html
+++ b/Index.html
@@ -30,8 +30,29 @@
 </header>
 <main>
 <!-- Hero -->
-<section class="">
-
+<section class="contaier maxi-container bg-lightblue">
+  <div class="container medium-container">
+    <div class="row row-title">
+      <h1 class="title"><strong>Tutto ciò che ti serve per il lavoro, in un unico posto</strong></h1>
+    </div>
+      <div class="row row-hero">
+        <div class="col-5">
+          <div class="">
+          <p class="pd-p">Finalmente tutti i tuoi strumenti contenuti e collaboratori
+            sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio
+            di archivazione sicuro: è un modo intelligente e integrato per ottimizzare 
+            il flusso di lavoro esistente.</p>
+          </div>
+          <div class="anchor-hero">
+          <a href="Fourth" class="pd-nav-special bg-blue white text-deco">Inizia la tua prova gratuita</a>
+          </div>
+          <div class="">
+            <p>Annulla in qualsiasi momento</p>
+          </div>
+        </div>
+        <div class="col-7"></div>
+      </div>
+  </div>
 </section>
 </main>
 <footer>
