--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
   <nav class="nav-container bg-white">
     <div class="row nav-row">
       <div class="col">
-        <img src="./img/logo-small.png" class="logo">
+        <img src="./img/logo-small.png" href="" class="logo">
         <a href="First" class="pd-nav text-deco black">Perché Dropbox</a>
         <a href="Second" class="pd-nav text-deco black">Funzioni</a>
         <a href="Third" class="pd-nav text-deco black">Piani e prezzi</a>
@@ -30,28 +30,41 @@
 </header>
 <main>
 <!-- Hero -->
-<section class="contaier maxi-container bg-lightblue">
+<section class="container maxi-container bg-lightblue">
   <div class="container medium-container">
     <div class="row row-title">
       <h1 class="title"><strong>Tutto ciò che ti serve per il lavoro, in un unico posto</strong></h1>
     </div>
       <div class="row row-hero">
         <div class="col-5">
-          <div class="">
-          <p class="pd-p">Finalmente tutti i tuoi strumenti contenuti e collaboratori
+          <div class="grow1">
+           <p class="margin-special">Finalmente tutti i tuoi strumenti contenuti e collaboratori
             sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio
             di archivazione sicuro: è un modo intelligente e integrato per ottimizzare 
             il flusso di lavoro esistente.</p>
-          </div>
-          <div class="anchor-hero">
-          <a href="Fourth" class="pd-nav-special bg-blue white text-deco">Inizia la tua prova gratuita</a>
-          </div>
-          <div class="">
-            <p>Annulla in qualsiasi momento</p>
+           <a href="Fourth" class="pd-nav-special bg-blue white text-deco margin2-special">Inizia la tua prova gratuita</a>
+           <p>Annulla in qualsiasi momento</p>
           </div>
         </div>
-        <div class="col-7"></div>
+        <div class="col-7">
+          <img src="./img/jumbo.png" href="" class="jumbo">
+        </div>
       </div>
+  </div>
+</section>
+<!-- card -->
+<section class="container container-cards">
+  <div class="row row-title row-title-special">
+    <h3 class="title2"><strong>Trova il piano business che fa per te</strong></h3>
+    <div class="radio-container">
+      <div class="row-circle">
+      <input type="radio"/>
+      <label for="circle">Fatturazione mensile</label>
+      <input type="radio"/>
+      <label for="circle">Fatturazione annuale</label>
+      </div>
+    </div>
+  
   </div>
 </section>
 </main>
