Fix cards - section title

--- a/Index.html
+++ b/Index.html
@@ -52,20 +52,15 @@
       </div>
   </div>
 </section>
-<!-- card -->
-<section class="container container-cards">
-  <div class="row row-title row-title-special">
+<!-- cards - section title -->
+<section class="container-cards">
     <h3 class="title2"><strong>Trova il piano business che fa per te</strong></h3>
-    <div class="radio-container">
       <div class="row-circle">
-      <input type="radio"/>
-      <label for="circle">Fatturazione mensile</label>
-      <input type="radio"/>
-      <label for="circle">Fatturazione annuale</label>
-      </div>
-    </div>
-  
-  </div>
+        <input type="radio"/>
+        <label for="circle">Fatturazione mensile</label>
+        <input type="radio"/>
+        <label for="circle">Fatturazione annuale</label>
+      </div> 
 </section>
 </main>
 <footer>
