Fix cards - section title

--- a/Index.html
+++ b/Index.html
@@ -53,14 +53,17 @@
   </div>
 </section>
 <!-- cards - section title -->
-<section class="container-cards">
+<section class="container container-cards">
     <h3 class="title2"><strong>Trova il piano business che fa per te</strong></h3>
-      <div class="row-circle">
-        <input type="radio"/>
-        <label for="circle">Fatturazione mensile</label>
-        <input type="radio"/>
-        <label for="circle">Fatturazione annuale</label>
-      </div> 
+    <div class="radio">
+      <input type="radio"/>
+      <label for="circle">Fatturazione mensile</label>
+      <input type="radio"/>
+      <label for="circle">Fatturazione annuale</label>
+    </div>
+</section>
+<section>
+
 </section>
 </main>
 <footer>
