Aggiunta struttura cards

--- a/Index.html
+++ b/Index.html
@@ -12,58 +12,69 @@
 <!-- Toolbar header -->
 <header>
   <nav class="nav-container bg-white">
-    <div class="row nav-row">
-      <div class="col">
-        <img src="./img/logo-small.png" href="" class="logo">
-        <a href="First" class="pd-nav text-deco black">Perché Dropbox</a>
-        <a href="Second" class="pd-nav text-deco black">Funzioni</a>
-        <a href="Third" class="pd-nav text-deco black">Piani e prezzi</a>
+      <div class="row nav-row">
+         <div class="col">
+            <img src="./img/logo-small.png" href="" class="logo">
+            <a href="First" class="pd-nav text-deco black">Perché Dropbox</a>
+            <a href="Second" class="pd-nav text-deco black">Funzioni</a>
+            <a href="Third" class="pd-nav text-deco black">Piani e prezzi</a>
+         </div>
+         <div class="col">
+            <a href="First" class="pd-nav text-deco black">Supporto</a>
+            <a href="Second" class="pd-nav text-deco black">Contatta l'ufficio vendite</a>
+            <a href="Third" class="pd-nav text-deco black">Accedi</a>
+            <a href="Fourth" class="pd-nav-special bg-blue white text-deco">Inizia</a>
+         </div>
       </div>
-      <div class="col">
-        <a href="First" class="pd-nav text-deco black">Supporto</a>
-        <a href="Second" class="pd-nav text-deco black">Contatta l'ufficio vendite</a>
-        <a href="Third" class="pd-nav text-deco black">Accedi</a>
-        <a href="Fourth" class="pd-nav-special bg-blue white text-deco">Inizia</a>
-      </div>
-    </div>
   </nav>
 </header>
 <main>
 <!-- Hero -->
 <section class="container maxi-container bg-lightblue">
   <div class="container medium-container">
-    <div class="row row-title">
-      <h1 class="title"><strong>Tutto ciò che ti serve per il lavoro, in un unico posto</strong></h1>
-    </div>
+      <div class="row row-title">
+          <h1 class="title"><strong>Tutto ciò che ti serve per il lavoro, in un unico posto</strong></h1>
+      </div>
       <div class="row row-hero">
-        <div class="col-5">
-          <div class="grow1">
-           <p class="margin-special">Finalmente tutti i tuoi strumenti contenuti e collaboratori
+         <div class="col-5">
+            <p class="margin-special">Finalmente tutti i tuoi strumenti contenuti e collaboratori
             sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio
             di archivazione sicuro: è un modo intelligente e integrato per ottimizzare 
             il flusso di lavoro esistente.</p>
-           <a href="Fourth" class="pd-nav-special bg-blue white text-deco margin2-special">Inizia la tua prova gratuita</a>
-           <p>Annulla in qualsiasi momento</p>
-          </div>
-        </div>
-        <div class="col-7">
-          <img src="./img/jumbo.png" href="" class="jumbo">
-        </div>
+            <a href="Fourth" class="pd-nav-special bg-blue white text-deco margin2-special">Inizia la tua prova gratuita</a>
+            <p>Annulla in qualsiasi momento</p>
+         </div>
+         <div class="col-7">
+            <img src="./img/jumbo.png" href="" class="jumbo">
+         </div>
       </div>
   </div>
 </section>
 <!-- cards - section title -->
 <section class="container container-cards">
-    <h3 class="title2"><strong>Trova il piano business che fa per te</strong></h3>
-    <div class="radio">
-      <input type="radio"/>
-      <label for="circle">Fatturazione mensile</label>
-      <input type="radio"/>
-      <label for="circle">Fatturazione annuale</label>
+  <div class="container-radio">
+    <div class="row-radio">
+       <div class="col-12">
+          <h2 class="title2"><strong>Trova il piano business che fa per te</strong></h2>
+       </div>
+       <div class="col-12 ">
+          <input type="radio"/>
+          <label for="circle">Fatturazione mensile</label>
+          <input type="radio"/>
+          <label for="circle">Fatturazione annuale</label>
+       </div>
     </div>
+  </div>
 </section>
-<section>
-
+<!-- cards -->
+<section class="container container-cards">
+  <div class="row-cards">
+   <div class="col-4"></div>
+   <div class="col-4"></div>
+   <div class="col-4"></div>
+   <div class="col-12"></div>
+  </div>
+  
 </section>
 </main>
 <footer>
