Add - card header/card body prima card

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
+<link href="https://kit.fontawesome.com/89e0a71f31.js">
 </head>
 <!-- Toolbar header -->
 <header>
@@ -51,9 +52,9 @@
   </div>
 </section>
 <!-- cards - section title -->
-<section class="container container-cards">
+<section class="container container-cards-radio">
   <div class="container-radio">
-    <div class="row-radio">
+    <div class="row row-radio">
        <div class="col-12">
           <h2 class="title2"><strong>Trova il piano business che fa per te</strong></h2>
        </div>
@@ -68,12 +69,21 @@
 </section>
 <!-- cards -->
 <section class="container container-cards">
-  <div class="row-cards">
-   <div class="col-4"></div>
-   <div class="col-4"></div>
-   <div class="col-4"></div>
-   <div class="col-12"></div>
-  </div>
+    <div class="row row-cards">
+       <div class="col-4 card-border">
+          <div class="card-header">
+            <span class="single">Singolo</span>
+          </div>
+          <div class="card-body">
+            <h4 class="plan-title"><strong>Professional</strong></h4>
+            <span class="price">€ 12,00</span>
+            <span class="month">/ mese</span>
+          </div>
+       </div>
+       <div class="col-4"></div>
+       <div class="col-4"></div>
+       <div class="col-12"></div>
+    </div>
   
 </section>
 </main>
