Add- card2 e card3

--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
             sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio
             di archivazione sicuro: è un modo intelligente e integrato per ottimizzare 
             il flusso di lavoro esistente.</p>
-            <a href="Fourth" class="pd-nav-special bg-blue white text-deco margin2-special">Inizia la tua prova gratuita</a>
+            <a href="Fourth" class="padding-nav-special bg-blue white text-deco margin2-special">Inizia la tua prova gratuita</a>
             <p>Annulla in qualsiasi momento</p>
          </div>
          <div class="col-7">
@@ -68,6 +68,7 @@
   </div>
 </section>
 <!-- cards -->
+   <!--prima card-->
 <section class="container container-cards">
     <div class="row row-cards">
        <div class="col-4 card-border">
@@ -75,13 +76,121 @@
             <span class="single">Singolo</span>
           </div>
           <div class="card-body">
+            <!-- primo blocco -->
             <h4 class="plan-title"><strong>Professional</strong></h4>
             <span class="price">€ 12,00</span>
             <span class="month">/ mese</span>
           </div>
+            <div>
+              <ul class="card-list">
+                <li>
+                  <p>1 utente</p>
+                </li>
+                <li>
+                  <p>5 TB di spazio di archiviazione sicuro</p>
+                </li>
+                <li>
+                  <p>Fuonzioni di attività premium e condivisione file semplice e sicura</p>
+                </li>
+              </ul>
+            </div>
+            <div class="button">
+              <a href="Fourth" class="padding-nav-special bg-blue white text-deco margin3-special">Prova gratis per 30 giorni</a>
+              <span>oppure</span>
+              <a href="Fifth">acquista ora</a>
+            </div>
+            <div>
+              <p><strong>Punti salienti del piano</strong></p>
+              <ul class="card-list card-list2">
+                <li>
+                  <p>Invia File fino a 100gb con Dropbox Transfert</p>
+                </li>
+                <li>
+                  <p>Cartelle offline su dispositivi mobili</p>
+                </li>  
+              </ul>
+            </div>
        </div>
-       <div class="col-4"></div>
-       <div class="col-4"></div>
+       <div class="col-4 card-border">
+        <div class="card-header">
+          <span class="single">Singolo</span>
+        </div>
+        <div class="card-body">
+          <!-- primo blocco -->
+          <h4 class="plan-title"><strong>Professional</strong></h4>
+          <span class="price">€ 12,00</span>
+          <span class="month">/ mese</span>
+        </div>
+          <div>
+            <ul class="card-list">
+              <li>
+                <p>1 utente</p>
+              </li>
+              <li>
+                <p>5 TB di spazio di archiviazione sicuro</p>
+              </li>
+              <li>
+                <p>Fuonzioni di attività premium e condivisione file semplice e sicura</p>
+              </li>
+            </ul>
+          </div>
+          <div class="button">
+            <a href="Fourth" class="padding-nav-special bg-blue white text-deco margin3-special">Prova gratis per 30 giorni</a>
+            <span>oppure</span>
+            <a href="Fifth">acquista ora</a>
+          </div>
+          <div>
+            <p><strong>Punti salienti del piano</strong></p>
+            <ul class="card-list card-list2">
+              <li>
+                <p>Invia File fino a 100gb con Dropbox Transfert</p>
+              </li>
+              <li>
+                <p>Cartelle offline su dispositivi mobili</p>
+              </li>  
+            </ul>
+          </div>
+       </div>
+       <div class="col-4 card-border">
+        <div class="card-header">
+          <span class="single">Singolo</span>
+        </div>
+        <div class="card-body">
+          <!-- primo blocco -->
+          <h4 class="plan-title"><strong>Professional</strong></h4>
+          <span class="price">€ 12,00</span>
+          <span class="month">/ mese</span>
+        </div>
+          <div>
+            <ul class="card-list">
+              <li>
+                <p>1 utente</p>
+              </li>
+              <li>
+                <p>5 TB di spazio di archiviazione sicuro</p>
+              </li>
+              <li>
+                <p>Fuonzioni di attività premium e condivisione file semplice e sicura</p>
+              </li>
+            </ul>
+          </div>
+          <div class="button">
+            <a href="Fourth" class="padding-nav-special bg-blue white text-deco margin3-special">Prova gratis per 30 giorni</a>
+            <span>oppure</span>
+            <a href="Fifth">acquista ora</a>
+          </div>
+          <div>
+            <p><strong>Punti salienti del piano</strong></p>
+            <ul class="card-list card-list2">
+              <li>
+                <p>Invia File fino a 100gb con Dropbox Transfert</p>
+              </li>
+              <li>
+                <p>Cartelle offline su dispositivi mobili</p>
+              </li>  
+            </ul>
+          </div>
+       </div>
        <div class="col-12"></div>
     </div>
   
