Add- quarta card

--- a/Index.html
+++ b/Index.html
@@ -16,15 +16,15 @@
       <div class="row nav-row">
          <div class="col">
             <img src="./img/logo-small.png" href="" class="logo">
-            <a href="First" class="pd-nav text-deco black">Perché Dropbox</a>
-            <a href="Second" class="pd-nav text-deco black">Funzioni</a>
-            <a href="Third" class="pd-nav text-deco black">Piani e prezzi</a>
+            <a href="First" class="padding-nav text-deco black">Perché Dropbox</a>
+            <a href="Second" class="padding-nav text-deco black">Funzioni</a>
+            <a href="Third" class="padding-nav text-deco black">Piani e prezzi</a>
          </div>
          <div class="col">
-            <a href="First" class="pd-nav text-deco black">Supporto</a>
-            <a href="Second" class="pd-nav text-deco black">Contatta l'ufficio vendite</a>
-            <a href="Third" class="pd-nav text-deco black">Accedi</a>
-            <a href="Fourth" class="pd-nav-special bg-blue white text-deco">Inizia</a>
+            <a href="First" class="padding-nav text-deco black">Supporto</a>
+            <a href="Second" class="padding-nav text-deco black">Contatta l'ufficio vendite</a>
+            <a href="Third" class="padding-nav text-deco black">Accedi</a>
+            <a href="Fourth" class="padding-nav-special bg-blue white text-deco">Inizia</a>
          </div>
       </div>
   </nav>
@@ -58,7 +58,7 @@
        <div class="col-12">
           <h2 class="title2"><strong>Trova il piano business che fa per te</strong></h2>
        </div>
-       <div class="col-12 ">
+       <div class="col-12">
           <input type="radio"/>
           <label for="circle">Fatturazione mensile</label>
           <input type="radio"/>
@@ -101,7 +101,7 @@
             </div>
             <div>
               <p><strong>Punti salienti del piano</strong></p>
-              <ul class="card-list card-list2">
+              <ul class="card-list button">
                 <li>
                   <p>Invia File fino a 100gb con Dropbox Transfert</p>
                 </li>
@@ -111,6 +111,7 @@
               </ul>
             </div>
        </div>
+       <!--seconda card-->
        <div class="col-4 card-border">
         <div class="card-header">
           <span class="single">Singolo</span>
@@ -141,7 +142,7 @@
           </div>
           <div>
             <p><strong>Punti salienti del piano</strong></p>
-            <ul class="card-list card-list2">
+            <ul class="card-list button">
               <li>
                 <p>Invia File fino a 100gb con Dropbox Transfert</p>
               </li>
@@ -151,6 +152,7 @@
             </ul>
           </div>
        </div>
+       <!--terza card-->
        <div class="col-4 card-border">
         <div class="card-header">
           <span class="single">Singolo</span>
@@ -181,7 +183,7 @@
           </div>
           <div>
             <p><strong>Punti salienti del piano</strong></p>
-            <ul class="card-list card-list2">
+            <ul class="card-list button">
               <li>
                 <p>Invia File fino a 100gb con Dropbox Transfert</p>
               </li>
@@ -191,7 +193,34 @@
             </ul>
           </div>
        </div>
-       <div class="col-12"></div>
+       <!--quarta card-->
+       <div class="col-12 card-border">
+         <div class="card-header">
+             <span class="single">Singolo</span>
+         </div>
+         <div class="container-team">
+          <div class="row row-team">
+             <div class="col col-team">
+               <h4 class="plan-title"><strong>Professional</strong></h4>
+               <p>Contatto l'ufficio vendite per i prezzi</p>
+               <!--<div>
+                <p class="solutions-team">Soluzioni personalizzate e supporto su misura
+                  per aiutare i professionisti IT nella gestione su qualsiasi scala.
+                </p>
+               </div> -->
+             </div>
+             <div class="col">
+               <a href="Fourth" class="padding-nav-special bg-blue white text-deco ">Prova gratis per 30 giorni</a>
+             </div>
+             <div class="col">
+              <p class="solutions-team">Soluzioni personalizzate e supporto su misura
+                per aiutare i professionisti IT nella gestione su qualsiasi scala.
+              </p>
+             </div>
+
+          </div>
+         </div>
+       </div>
     </div>
   
 </section>
