Add- cards/section dropbox business

--- a/Index.html
+++ b/Index.html
@@ -29,6 +29,7 @@
       </div>
   </nav>
 </header>
+<body>
 <main>
 <!-- Hero -->
 <section class="container maxi-container bg-lightblue">
@@ -69,7 +70,8 @@
 </section>
 <!-- cards -->
    <!--prima card-->
-<section class="container container-cards">
+<section >
+  <div class="container container-cards">
     <div class="row row-cards">
        <div class="col-4 card-border">
           <div class="card-header">
@@ -153,7 +155,7 @@
           </div>
        </div>
        <!--terza card-->
-       <div class="col-4 card-border">
+       <div class="col-4 card-border card-padding">
         <div class="card-header">
           <span class="single">Singolo</span>
         </div>
@@ -203,11 +205,6 @@
              <div class="col col-team">
                <h4 class="plan-title"><strong>Professional</strong></h4>
                <p>Contatto l'ufficio vendite per i prezzi</p>
-               <!--<div>
-                <p class="solutions-team">Soluzioni personalizzate e supporto su misura
-                  per aiutare i professionisti IT nella gestione su qualsiasi scala.
-                </p>
-               </div> -->
              </div>
              <div class="col">
                <a href="Fourth" class="padding-nav-special bg-blue white text-deco ">Prova gratis per 30 giorni</a>
@@ -217,18 +214,129 @@
                 per aiutare i professionisti IT nella gestione su qualsiasi scala.
               </p>
              </div>
-
           </div>
          </div>
        </div>
     </div>
-  
+</div>
 </section>
+<!--section: entra in contatto -->
+<section>
+    <div class="container container-cards">
+      <div class="row row-hero">
+         <div class="col-7">
+            <img src="./img/partner.png" href="" class="jumbo">
+         </div>
+         <div class="col-5">
+            <h4 class="title-contact"><strong>Entra in contatto con un partner Dropbox</strong></h4>
+            <p class="margin-special">Finalmente tutti i tuoi strumenti contenuti e collaboratori
+            sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio
+            di archivazione sicuro: è un modo intelligente e integrato per ottimizzare 
+            il flusso di lavoro esistente.</p>
+            <a href="Fourth" class="padding-nav-special black card-border text-deco margin2-special">Inizia la tua prova gratuita</a>
+         </div>
+      </div>
+   </div>
+</section>
+<!--section: Dropbox Business-->
+  <section class="section">
+    <div class="container container-cards">
+      <h2 class="title2"><strong>Esegui più operazioni con Dropbox Business</strong></h2>
+        <div class="row row-cards2">
+            <div class="col-4">
+                <div class="card">
+                    <figure class="card-image">
+                            <img src="./img/business-feature-switching-tools.png" alt=""/>    
+                        <section>
+                            <p class="text"><strong>Passa di meno da uno strumento all'altro</strong></p>
+                            <p>Porta a termine le attività quotidiane con un solo strumento.
+                              Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni
+                              di Google, Filo Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                            </p>
+                        </section>
+                    </figure>
+                </div>
+            </div>
+            <div class="col-4">
+              <div class="card">
+                  <figure class="card-image">
+                          <img src="./img/business-feature-send-files-it.png" alt=""/>    
+                      <section>
+                          <p class="text"><strong>Passa di meno da uno strumento all'altro</strong></p>
+                          <p>Porta a termine le attività quotidiane con un solo strumento.
+                            Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni
+                            di Google, Filo Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                          </p>
+                      </section>
+                  </figure>
+              </div>
+          </div>
+          <div class="col-4">
+            <div class="card">
+                <figure class="card-image">
+                        <img src="./img/business-feature-coordinate-it.png" alt=""/>    
+                    <section>
+                        <p class="text"><strong>Passa di meno da uno strumento all'altro</strong></p>
+                        <p>Porta a termine le attività quotidiane con un solo strumento.
+                          Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni
+                          di Google, Filo Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                        </p>
+                    </section>
+                </figure>
+            </div>
+        </div>
+        <div class="col-4">
+          <div class="card">
+              <figure class="card-image">
+                      <img src="./img/business-feature-integrations-it.png" alt=""/>    
+                  <section>
+                      <p class="text"><strong>Passa di meno da uno strumento all'altro</strong></p>
+                      <p>Porta a termine le attività quotidiane con un solo strumento.
+                        Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni
+                        di Google, Filo Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                      </p>
+                  </section>
+              </figure>
+          </div>
+      </div>
+      <div class="col-4">
+        <div class="card">
+            <figure class="card-image">
+                    <img src="./img/business-feature-multi-device.png" alt=""/>    
+                <section>
+                    <p class="text"><strong>Passa di meno da uno strumento all'altro</strong></p>
+                    <p>Porta a termine le attività quotidiane con un solo strumento.
+                      Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni
+                      di Google, Filo Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                    </p>
+                </section>
+            </figure>
+        </div>
+    </div>
+    <div class="col-4">
+      <div class="card">
+          <figure class="card-image">
+                  <img src="./img/business-feature-security.png" alt=""/>    
+              <section>
+                  <p class="text"><strong>Passa di meno da uno strumento all'altro</strong></p>
+                  <p>Porta a termine le attività quotidiane con un solo strumento.
+                    Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni
+                    di Google, Filo Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                  </p>
+              </section>
+          </figure>
+      </div>
+    </div>
+  </div>
+</div>   
+</section>
+
 </main>
+</body>
 <footer>
 
 </footer>
-<body>
+
     
-</body>
+
 </html>
