--- a/Index.html
+++ b/Index.html
@@ -246,7 +246,7 @@
             <div class="col-4">
                 <div class="card">
                     <figure class="card-image">
-                            <img src="./img/business-feature-switching-tools.png" alt=""/>    
+                            <img src="./img/business-feature-switching-tools.png" alt="" class="card-image"/>    
                         <section>
                             <p class="text"><strong>Passa di meno da uno strumento all'altro</strong></p>
                             <p>Porta a termine le attività quotidiane con un solo strumento.
@@ -260,7 +260,7 @@
             <div class="col-4">
               <div class="card">
                   <figure class="card-image">
-                          <img src="./img/business-feature-send-files-it.png" alt=""/>    
+                          <img src="./img/business-feature-send-files-it.png" alt="" class="card-image"/>    
                       <section>
                           <p class="text"><strong>Passa di meno da uno strumento all'altro</strong></p>
                           <p>Porta a termine le attività quotidiane con un solo strumento.
@@ -274,7 +274,7 @@
           <div class="col-4">
             <div class="card">
                 <figure class="card-image">
-                        <img src="./img/business-feature-coordinate-it.png" alt=""/>    
+                        <img src="./img/business-feature-coordinate-it.png" alt="" class="card-image"/>    
                     <section>
                         <p class="text"><strong>Passa di meno da uno strumento all'altro</strong></p>
                         <p>Porta a termine le attività quotidiane con un solo strumento.
@@ -288,7 +288,7 @@
         <div class="col-4">
           <div class="card">
               <figure class="card-image">
-                      <img src="./img/business-feature-integrations-it.png" alt=""/>    
+                      <img src="./img/business-feature-integrations-it.png" alt="" class="card-image"/>    
                   <section>
                       <p class="text"><strong>Passa di meno da uno strumento all'altro</strong></p>
                       <p>Porta a termine le attività quotidiane con un solo strumento.
@@ -302,7 +302,7 @@
       <div class="col-4">
         <div class="card">
             <figure class="card-image">
-                    <img src="./img/business-feature-multi-device.png" alt=""/>    
+                    <img src="./img/business-feature-multi-device.png" alt="" class="card-image"/>    
                 <section>
                     <p class="text"><strong>Passa di meno da uno strumento all'altro</strong></p>
                     <p>Porta a termine le attività quotidiane con un solo strumento.
@@ -316,7 +316,7 @@
     <div class="col-4">
       <div class="card">
           <figure class="card-image">
-                  <img src="./img/business-feature-security.png" alt=""/>    
+                  <img src="./img/business-feature-security.png" alt="" class="card-image"/>    
               <section>
                   <p class="text"><strong>Passa di meno da uno strumento all'altro</strong></p>
                   <p>Porta a termine le attività quotidiane con un solo strumento.
@@ -330,7 +330,15 @@
   </div>
 </div>   
 </section>
-
+<!--Titolo Dropbox Business-->
+<div class="container container-cards">
+  <div class="row row-radio">
+     <div class="col-12">
+        <h2 class="title2 title3"><strong>Più di 500.000 team utilizzano Dropbox Business</strong></h2>
+        <a href="Fifth">Scopri di più sui nostri clienti</a>  
+      </div>  
+  </div>
+</div>
 </main>
 </body>
 <footer>
