Add - blocchi clienti

--- a/Index.html
+++ b/Index.html
@@ -339,6 +339,42 @@
       </div>  
   </div>
 </div>
+<section class="logo-company">
+  <div class="maxi-container">
+     <div class="row">
+        <div class="col-4 flex-logo">
+          <div class="container-logo bg-green">
+             <img src="./img/designit.svg" alt="" class="invert"/>
+          </div>
+          <div class="container-logo bg-darkred">
+             <img src="./img/arizona_state_university.svg" alt="" class="invert"/>
+          </div>
+          <div class="container-logo bg-blue">
+              <img src="./img/designit.svg" alt="" class="invert"/>
+          </div>
+          <div class="container-logo bg-red">
+             <img src="./img/topps.svg" alt="" class="invert"/>
+          </div>
+        </div>
+        <div class="col-4 bg-discovery">
+             <img src="./img/designit.svg" alt="" class="logo-discovery"/>
+        </div>
+        <div class="col-4 flex-logo">
+          <div class="container-logo bg-green">
+             <img src="./img/designit.svg" alt="" class="invert"/>
+          </div>
+        <div class="container-logo bg-darkred">
+            <img src="./img/arizona_state_university.svg" alt="" class="invert"/>
+        </div>
+        <div class="container-logo bg-blue">
+            <img src="./img/university_of_florida.svg" alt="" class="invert"/>
+        </div>
+        <div class="container-logo bg-red">
+            <img src="./img/topps.svg" alt="" class="invert"/>
+        </div>
+    </div>
+    </div>
+</section>
 </main>
 </body>
 <footer>
