--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
 <link href="https://kit.fontawesome.com/89e0a71f31.js">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <!-- Toolbar header -->
 <header>
@@ -75,7 +76,7 @@
     <div class="row row-cards">
        <div class="col-4 card-border">
           <div class="card-header">
-            <span class="single">Singolo</span>
+            <i class="fa-solid fa-user"></i><span class="single">Singolo</span>
           </div>
           <div class="card-body">
             <!-- primo blocco -->
@@ -86,10 +87,10 @@
             <div>
               <ul class="card-list">
                 <li>
-                  <p>1 utente</p>
+                  <i class="fa-solid fa-user"></i><span>1 utente</span>
                 </li>
                 <li>
-                  <p>5 TB di spazio di archiviazione sicuro</p>
+                  <i class="fa-solid fa-folder"></i> <span>5 TB di spazio di archiviazione sicuro</span>
                 </li>
                 <li>
                   <p>Fuonzioni di attività premium e condivisione file semplice e sicura</p>
@@ -105,10 +106,10 @@
               <p><strong>Punti salienti del piano</strong></p>
               <ul class="card-list button">
                 <li>
-                  <p>Invia File fino a 100gb con Dropbox Transfert</p>
+                  <i class="fa-solid fa-check"></i><span>Invia File fino a 100gb con Dropbox Transfert</span>
                 </li>
                 <li>
-                  <p>Cartelle offline su dispositivi mobili</p>
+                  <i class="fa-solid fa-check"></i><span>Cartelle offline su dispositivi mobili</span>
                 </li>  
               </ul>
             </div>
@@ -116,7 +117,7 @@
        <!--seconda card-->
        <div class="col-4 card-border">
         <div class="card-header">
-          <span class="single">Singolo</span>
+          <i class="fa-solid fa-people-group"></i><span class="single">Singolo</span>
         </div>
         <div class="card-body">
           <!-- primo blocco -->
@@ -127,10 +128,10 @@
           <div>
             <ul class="card-list">
               <li>
-                <p>1 utente</p>
+                <i class="fa-solid fa-user"></i><span>1 utente</span>
               </li>
               <li>
-                <p>5 TB di spazio di archiviazione sicuro</p>
+                <i class="fa-solid fa-folder"></i><span>5 TB di spazio di archiviazione sicuro</span>
               </li>
               <li>
                 <p>Fuonzioni di attività premium e condivisione file semplice e sicura</p>
@@ -146,10 +147,10 @@
             <p><strong>Punti salienti del piano</strong></p>
             <ul class="card-list button">
               <li>
-                <p>Invia File fino a 100gb con Dropbox Transfert</p>
+                <i class="fa-solid fa-check"></i><span>Invia File fino a 100gb con Dropbox Transfert</span>
               </li>
               <li>
-                <p>Cartelle offline su dispositivi mobili</p>
+                <i class="fa-solid fa-check"></i><span>Cartelle offline su dispositivi mobili</span>
               </li>  
             </ul>
           </div>
@@ -157,7 +158,7 @@
        <!--terza card-->
        <div class="col-4 card-border card-padding">
         <div class="card-header">
-          <span class="single">Singolo</span>
+          <i class="fa-solid fa-building"></i><span class="single">Singolo</span>
         </div>
         <div class="card-body">
           <!-- primo blocco -->
@@ -168,10 +169,10 @@
           <div>
             <ul class="card-list">
               <li>
-                <p>1 utente</p>
+                <i class="fa-solid fa-user"></i> <span>1 utente</span>
               </li>
               <li>
-                <p>5 TB di spazio di archiviazione sicuro</p>
+                <i class="fa-solid fa-folder"></i><span>5 TB di spazio di archiviazione sicuro</span>
               </li>
               <li>
                 <p>Fuonzioni di attività premium e condivisione file semplice e sicura</p>
@@ -187,10 +188,10 @@
             <p><strong>Punti salienti del piano</strong></p>
             <ul class="card-list button">
               <li>
-                <p>Invia File fino a 100gb con Dropbox Transfert</p>
+                <i class="fa-solid fa-check"></i><span>Invia File fino a 100gb con Dropbox Transfert</span>
               </li>
               <li>
-                <p>Cartelle offline su dispositivi mobili</p>
+                <i class="fa-solid fa-check"></i> <span>Cartelle offline su dispositivi mobili</span>
               </li>  
             </ul>
           </div>
@@ -339,6 +340,7 @@
       </div>  
   </div>
 </div>
+<!--blocchi colorati-->
 <section class="logo-company">
   <div class="maxi-container">
      <div class="row">
@@ -350,7 +352,7 @@
              <img src="./img/arizona_state_university.svg" alt="" class="invert"/>
           </div>
           <div class="container-logo bg-blue">
-              <img src="./img/designit.svg" alt="" class="invert"/>
+              <img src="./img/university_of_florida.svg" alt="" class="invert"/>
           </div>
           <div class="container-logo bg-red">
              <img src="./img/topps.svg" alt="" class="invert"/>
@@ -358,27 +360,119 @@
         </div>
         <div class="col-4 bg-discovery">
              <img src="./img/designit.svg" alt="" class="logo-discovery"/>
+             <hr class="line-logo">
+             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto veniam tempore illo deleniti alias accusantium possimus architecto nostrum! Quidem reiciendis voluptas quas molestiae suscipit ducimus eveniet doloribus voluptatum quae hic.</p>
         </div>
         <div class="col-4 flex-logo">
-          <div class="container-logo bg-green">
-             <img src="./img/designit.svg" alt="" class="invert"/>
+          <div class="container-logo bg-red">
+             <img src="./img/world_bicycle_relief.svg" alt="" class="invert"/>
           </div>
-        <div class="container-logo bg-darkred">
-            <img src="./img/arizona_state_university.svg" alt="" class="invert"/>
+        <div class="container-logo bg-lightblue">
+            <img src="./img/hearst_corp.svg" alt="" class="invert"/>
         </div>
-        <div class="container-logo bg-blue">
-            <img src="./img/university_of_florida.svg" alt="" class="invert"/>
+        <div class="container-logo bg-darkblue">
+            <img src="./img/lonely_planet.svg" alt="" class="invert"/>
         </div>
-        <div class="container-logo bg-red">
-            <img src="./img/topps.svg" alt="" class="invert"/>
+        <div class="container-logo bg-yellow">
+            <img src="./img/clear_channel.svg" alt="" class="invert"/>
         </div>
     </div>
+  </div>
+</section>
+<!--section: prova gratuita button-->
+<section class="bg-lightblue">
+  <div class="container small-container container-task">
+      <div class="row row-task">
+       <div class="col-6 col-task">
+         <h4 class="plan-task"><strong>Porta Dropbox Business nella tua azienda.</strong></h4>
+       </div>
+       <div class="col-6 col-task">
+         <a href="Fourth" class="button-task black text-deco bg-white">Inizia la tua prova gratuita</a>
+       </div>    
+      </div>
+  </div>
+</section>
+<!--Domande-->
+<section class="container small-container">
+  <div class="questions">
+    <h4 class="plan-task"><strong>Domande frequenti</strong></h4>
+    <div>
+      <hr>
+      <p class="questions-drop">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
     </div>
+    <div>
+      <hr>
+      <p class="questions-drop">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+    </div>
+    <div>
+      <hr>
+      <p class="questions-drop">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+    </div>
+    <div>
+      <hr>
+      <p class="questions-drop">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+    </div>
+  </div>
 </section>
 </main>
 </body>
-<footer>
-
+<!-- footer -->
+<footer class="container maxi-container bg-black">
+  <div class="container medium-container">
+    <div class="row row-radio">
+       <div class="col">
+         <h3 class="white"><strong>Dropbox</strong></h3>
+         <ul class="white">
+           <li>Applicazione Desktop</li>
+           <li>Perché Dropbox</li>
+           <li>Piani</li>
+           <li>Sicurezza</li>
+           <li>Funzioni</li>
+         </ul>
+       </div> 
+       <div class="col">
+        <h3 class="white"><strong>Dropbox</strong></h3>
+         <ul class="white">
+           <li>Applicazione Desktop</li>
+           <li>Perché Dropbox</li>
+           <li>Piani</li>
+           <li>Sicurezza</li>
+           <li>Funzioni</li>
+         </ul>
+       </div>
+       <div class="col">
+        <h3 class="white"><strong>Dropbox</strong></h3>
+         <ul class="white">
+           <li>Applicazione Desktop</li>
+           <li>Perché Dropbox</li>
+           <li>Piani</li>
+           <li>Sicurezza</li>
+           <li>Funzioni</li>
+         </ul>
+       </div>
+       <div class="col">
+        <h3 class="white"><strong>Dropbox</strong></h3>
+         <ul class="white">
+           <li>Applicazione Desktop</li>
+           <li>Perché Dropbox</li>
+           <li>Piani</li>
+           <li>Sicurezza</li>
+           <li>Funzioni</li>
+         </ul>
+       </div>
+       <div class="col">
+        <h3 class="white"><strong>Dropbox</strong></h3>
+         <ul class="white">
+           <li>Applicazione Desktop</li>
+           <li>Perché Dropbox</li>
+           <li>Piani</li>
+           <li>Sicurezza</li>
+           <li>Funzioni</li>
+         </ul>
+       </div>
+    </div>
+  </div>
+ 
 </footer>
 
     
